--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
   
   .nav-links a:hover,
   .nav-links a:focus {
-    background-color: #003366; 
+    background-color: #032c55; 
     outline: none;
   }
   
