--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@
   }
   
   .navbar .logo {
+    font-style: none;
+    text-decoration: none;
+    color: antiquewhite;
     font-size: 1.25rem;
     font-weight: 700;
     user-select: none;
@@ -67,7 +70,8 @@
   }
   
 
-  @media (max-width: 600px) {
+  @media (max-width: 600px) 
+  {
     .nav-links {
       position: absolute;
       top: 60px;
@@ -97,4 +101,103 @@
     .menu-toggle {
       display: flex;
     }
+  }
+
+
+  
+  .form-container {
+    background-color: #fff;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    padding: 2rem 2.5rem;
+    max-width: 420px;
+    width: 100%;
+  }
+  h2 {
+    color: #2c3e50;
+    margin-bottom: 1.8rem;
+    font-weight: 700;
+    text-align: center;
+    letter-spacing: 1.1px;
+  }
+  label {
+    font-weight: 600;
+    color: #3a3a3a;
+  }
+  .form-control, .form-select {
+    border-radius: 8px;
+    padding: 10px 15px;
+    font-size: 1rem;
+    border: 2px solid #ced4da;
+    transition: border-color 0.3s ease;
+  }
+  .form-control:focus, .form-select:focus {
+    border-color: #6610f2;
+    box-shadow: 0 0 8px rgba(102, 16, 242, 0.5);
+    outline: none;
+  }
+  .form-check-label {
+    font-weight: 600;
+    user-select: none;
+    color: #3a3a3a;
+  }
+  .form-check-input {
+    width: 20px;
+    height: 20px;
+    border-radius: 6px;
+    cursor: pointer;
+    border: 2px solid #ced4da;
+    transition: border-color 0.3s ease, background-color 0.3s ease;
+  }
+  .form-check-input:checked {
+    background-color: #6610f2;
+    border-color: #6610f2;
+  }
+  .btn-primary {
+    background-color: #06196e;
+    color: white;
+    border: none;
+    font-weight: 700;
+    letter-spacing: 1.1px;
+    padding: 0.65rem;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
+  }
+  .btn-primary:hover,
+  .btn-primary:focus {
+    background-color: #520dc2;
+    outline: none;
+    box-shadow: 0 0 12px rgba(82, 13, 194, 0.7);
+  }
+
+  #geral {
+    display: flex;
+}
+
+.principal {
+    width: 100%;
+    max-width: 960px;
+    background: #fff;
+    box-shadow: 0 0 12px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    overflow: hidden;
+  }
+
+  .conteudo {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2rem;
+    gap: 2rem;
+  }
+
+  aside {
+    margin-top: 40px;
+  }
+
+  aside > p {
+    margin-bottom: 20px;
+  }
+
+  .aside {
+
   }
